fixed hr z-index

--- a/styling/style-main.css
+++ b/styling/style-main.css
@@ -124,6 +124,8 @@ body hr {
   overflow: visible;
   text-align: center;
   height: 10px;
+  z-index: -10;
+  position: relative;
 }
 body hr::after {
   content: "❃";
@@ -132,6 +134,7 @@ body hr::after {
   padding: 0 4px;
   position: relative;
   top: -1em;
+  z-index: -9;
 }
 body ::selection {
   background-color: rgba(100, 148, 237, 0.534);
@@ -180,22 +183,22 @@ body .google {
   font-family: "Product Sans", sans-serif;
 }
 body .google :nth-child(1) {
-  color: rgb(66, 132, 243);
+  color: #4284f3;
 }
 body .google :nth-child(2) {
-  color: rgb(234, 67, 53);
+  color: #ea4335;
 }
 body .google :nth-child(3) {
-  color: rgb(250, 188, 5);
+  color: #fabc05;
 }
 body .google :nth-child(4) {
-  color: rgb(66, 132, 243);
+  color: #4284f3;
 }
 body .google :nth-child(5) {
-  color: rgb(51, 168, 82);
+  color: #33a852;
 }
 body .google :nth-child(6) {
-  color: rgb(234, 67, 53);
+  color: #ea4335;
 }
 body main {
   margin: 2em 0;
@@ -238,5 +241,3 @@ body #scroll-to-top:active {
 body #scroll-to-top:hover {
   cursor: pointer;
 }
-
-/*# sourceMappingURL=style-main.css.map */
